<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- FragmentRecentPhoto -->
    <string name="fragmentRecentPhoto_title">Recent Photos</string>


    <!-- FragmentSearchPhoto -->
    <string name="fragmentSearchPhoto_search">search</string>
    <string name="fragmentSearchPhoto_clear_history">clear history</string>
    <string name="fragmentSearchPhoto_sample_search_history">Sea</string>


    <!-- FragmentPhotoDetail -->
    <string name="fragmentPhotoDetail_photo_title">Photo title:</string>
    <string name="fragmentPhotoDetail_photo_owner">Photo owner:</string>
    <string name="fragmentPhotoDetail_photo_date">Photo date:</string>
    <string name="fragmentPhotoDetail_photo_location">Photo location:</string>
    <string name="fragmentPhotoDetail_photo_description">Photo description:</string>


    <!-- FragmentFavoritePhoto -->
    <string name="fragmentFavoritePhoto_title">Favorite Photos</string>
    <string name="BottomSheetRemoveFavoritePhoto_remove_photo_question">Do you want to remove this photo?</string>
    <string name="BottomSheetRemoveFavoritePhoto_button_yes">Yes</string>
    <string name="BottomSheetRemoveFavoritePhoto_button_no">No</string>
</resources>