<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_16dp">

    <View
        android:id="@+id/top_view"
        android:layout_width="@dimen/fix_size_50dp"
        android:layout_height="@dimen/fix_size_2dp"
        android:background="@color/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_remove_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:gravity="center"
        android:text="@string/BottomSheetRemoveFavoritePhoto_remove_photo_question"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintTop_toBottomOf="@id/top_view" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fix_size_50dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/BottomSheetRemoveFavoritePhoto_button_yes"
        app:layout_constraintEnd_toStartOf="@id/btn_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_remove_item_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_no"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fix_size_50dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/BottomSheetRemoveFavoritePhoto_button_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_yes"
        app:layout_constraintTop_toBottomOf="@id/tv_remove_item_title" />

</androidx.constraintlayout.widget.ConstraintLayout>